<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/output"
        android:layout_width="373dp"
        android:layout_height="82dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:gravity="bottom|right"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <Button
        android:id="@+id/btn"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/inverse"
        android:textColor="#505050"
        android:textSize="36sp"
        app:backgroundTint="#D4D4D2"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_mod"
        app:layout_constraintTop_toBottomOf="@+id/output" />

    <Button
        android:id="@+id/btn_ac"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="108dp"
        android:text="@string/ac"
        android:textColor="#505050"
        android:textSize="27sp"
        app:backgroundTint="#D4D4D2"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output" />

    <Button
        android:id="@+id/btn_mod"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/percent"
        android:textColor="#505050"
        android:textSize="34sp"
        app:backgroundTint="#D4D4D2"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_div"
        app:layout_constraintTop_toBottomOf="@+id/output" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/div"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:backgroundTint="#FF9500"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:text="@string/_7"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ac" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_9"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_mult"
        app:layout_constraintTop_toBottomOf="@+id/btn_mod" />

    <Button
        android:id="@+id/btn_mult"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/mult"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:backgroundTint="#FF9500"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:text="@string/_4"
        android:textColor="#FFFEFE"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/_5"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/minus"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:backgroundTint="#FF9500"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mult" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_6"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_sub"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:backgroundTint="#FF9500"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sub" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="4dp"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="178dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:gravity="center|left"
        android:paddingLeft="30dp"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_decimal"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn_decimal"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/decimal"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold"
        app:backgroundTint="#505050"
        app:cornerRadius="150dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_equals"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="82dp"
        android:layout_height="89dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="30dp"
        android:text="@string/equal_to"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:backgroundTint="#FF9500"
        app:cornerRadius="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/input"
        android:layout_width="372dp"
        android:layout_height="139dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|right"
        android:textColor="#9A9A9A"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>